crates/jarl-core/src/lints/base/sprintf/snapshots/jarl_core__lints__base__sprintf__tests__no_fix_wrong_special_chars.snap
---
source: crates/jarl-core/src/lints/base/sprintf/mod.rs
expression: "get_fixed_text(vec![\"sprintf('%y', 'a')\",], \"sprintf\", None)"
---
OLD:
====
sprintf('%y', 'a')
NEW:
====
sprintf('%y', 'a')
